--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,12 +13,3 @@
   letter-spacing: 0.1px;
   user-select: none;
 }
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  min-height: 100vh;
-}
